Fixed layer control scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -135,7 +135,8 @@ div[id^="leaflet-control-accordion-layers"] > label {
     height: auto;
     max-height : 200px;
     margin: 8px 0;
-    overflow-y: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     line-height: 18px;
 }
 
